# Negotiate

./: .gitignore  DEPLOY.md  HANDOFF.md  PROJECT_SUMMARY.md  README.md  SECURITY.md  SUBMISSION.md  render.yaml  run-backend.bat  run-frontend.bat  vercel.json
backend/: .env.example  config.py  main.py  pyproject.toml  requirements.txt  schema.py
backend/configs/: moving.yaml
backend/prompts/: caller_agent.md  counterparty_hardsell.md  counterparty_stonewall.md  counterparty_tough.md  interview_agent.md
backend/scripts/: provision_agents.py
backend/services/: call_list.py  elevenlabs_client.py  openai_client.py
frontend/: eslint.config.mjs  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: app-shell.tsx  brief-stage.tsx  calls-stage.tsx  hero.tsx  login-screen.tsx  negotiate-stage.tsx  report-stage.tsx  setup-panel.tsx  stage-progress.tsx  theme-toggle.tsx  voice-intake-widget.tsx
frontend/src/components/ui/: alert.tsx  badge.tsx  button.tsx  card.tsx  dialog.tsx  globe.tsx  input.tsx  label.tsx  progress.tsx  select.tsx  skeleton.tsx  sonner.tsx  table.tsx  textarea.tsx
frontend/src/hooks/: use-polling.ts
frontend/src/lib/: api-client.ts  session.ts  types.ts
