[project]
name = "callpilot-backend"
version = "0.1.0"
description = "CallPilot backend — Estimator, Caller, Closer for THE NEGOTIATOR (ElevenLabs x Hack-Nation)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "python-multipart>=0.0.12",
    "httpx>=0.27.0",
    "PyYAML>=6.0.2",
    "openai>=1.54.0",
    "elevenlabs>=1.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["*.py", "services/*.py", "configs/*.yaml", "prompts/*.md"]
